# calamari

./: .gitignore  CMakeLists.txt  main.cpp
cmake/Modules/: FindGLFW.cmake
include/calamari/: application.hpp  camera.hpp  colour.cpp  colour.hpp  components.hpp  defines.hpp  error.hpp  eventcallbacks.hpp  eventmanager.hpp  key.hpp  matrix.hpp  object.hpp  objectbase.hpp  renderable.hpp  renderer.hpp  state.hpp  transformable.hpp  transformation.hpp  vector.hpp  window.hpp
include/calamari/gl/: gl.hpp  gl_core_3_3.hpp
src/: application.cpp  camera.cpp  colour.cpp  components.cpp  error.cpp  eventcallbacks.cpp  eventmanager.cpp  key.cpp  renderable.cpp  renderer.cpp  state.cpp  transformable.cpp  transformation.cpp  window.cpp
src/gl/: gl_core_3_3.cpp
